--- a/app/src/main/res/layout/item_budget_input.xml
+++ b/app/src/main/res/layout/item_budget_input.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,12 +13,25 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:textColor="@color/budget_text_primary"
         android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
 
-    <EditText
-        android:id="@+id/etCatLimit"
-        android:layout_width="100dp"
+    <com.google.android.material.textfield.TextInputLayout
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:hint="0" />
+        app:boxCornerRadiusBottomEnd="8dp"
+        app:boxCornerRadiusBottomStart="8dp"
+        app:boxCornerRadiusTopEnd="8dp"
+        app:boxCornerRadiusTopStart="8dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etCatLimit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:hint="0"
+            android:textSize="14sp"
+            android:padding="8dp"/>
+    </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
